--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register New User</title>
+    <title>Register</title>
     <style>
       body {
         display: flex;
@@ -39,13 +39,23 @@
   </head>
   <body>
     <div class="container">
-      <h1>Register New User</h1>
-      <form action="register.php" method="POST">
+      <h1>Register</h1>
+      <form id="registerForm" action="register.php" method="POST">
         <div class="form-group">
-          <input type="text" name="fname" placeholder="First Name" required />
+          <input
+            type="text"
+            name="first_name"
+            placeholder="First Name"
+            required
+          />
         </div>
         <div class="form-group">
-          <input type="text" name="lname" placeholder="Last Name" required />
+          <input
+            type="text"
+            name="last_name"
+            placeholder="Last Name"
+            required
+          />
         </div>
         <div class="form-group">
           <input type="email" name="email" placeholder="Email" required />
@@ -67,5 +77,28 @@
         <button type="submit" class="button">Register</button>
       </form>
     </div>
+    <script>
+      document
+        .getElementById("registerForm")
+        .addEventListener("submit", function (event) {
+          const form = event.target;
+          const inputs = form.querySelectorAll("input[required]");
+          let allFilled = true;
+
+          inputs.forEach((input) => {
+            if (!input.value.trim()) {
+              allFilled = false;
+              input.style.borderColor = "red";
+            } else {
+              input.style.borderColor = "";
+            }
+          });
+
+          if (!allFilled) {
+            event.preventDefault();
+            alert("Please fill in all required fields.");
+          }
+        });
+    </script>
   </body>
 </html>
