--- a/userhome.html
+++ b/userhome.html
@@ -23,9 +23,9 @@
         margin: 10px auto;
         background-color: #007bff;
         color: white;
+        text-align: center;
         text-decoration: none;
         border-radius: 5px;
-        text-align: center;
       }
       .button:hover {
         background-color: #0056b3;
@@ -37,7 +37,6 @@
       <h1>Welcome to Your Home Page</h1>
       <p id="user-name">You have successfully registered and logged in.</p>
       <a href="view-cars.html" class="button">View Cars</a>
-      <a href="search.html" class="button">Search Available Cars</a>
       <a href="advanced-search.html" class="button">Advanced Search</a>
       <a href="reports.html" class="button">History</a>
       <a href="logout.php" class="button">Logout</a>
@@ -52,11 +51,8 @@
             } else {
               document.getElementById(
                 "user-name"
-              ).textContent = `Welcome, ${data.first_name} ${data.last_name}`;
+              ).textContent = `Welcome, ${data.name}`;
             }
-          })
-          .catch((error) => {
-            console.error("Error fetching user info:", error);
           });
       });
     </script>
