--- a/view-cars.html
+++ b/view-cars.html
@@ -137,25 +137,15 @@
                                 <td>${car.location}</td>
                                 <td>
                                     ${
-                                      car.isAdmin
+                                      car.status === "Active"
                                         ? `
-                                        <form action="admin-rent-car.html" method="GET" style="display:inline;">
+                                        <form action="customer-rent-car.php" method="POST" style="display:inline;">
                                             <input type="hidden" name="car_id" value="${car.Car_ID}">
+                                            <input type="hidden" name="user_email" value="${car.user_email}">
                                             <button type="submit" class="button">Rent</button>
                                         </form>
                                     `
-                                        : `
-                                        ${
-                                          car.status === "Active"
-                                            ? `
-                                            <form action="customer-rent-car.php" method="POST" style="display:inline;">
-                                                <input type="hidden" name="car_id" value="${car.Car_ID}">
-                                                <button type="submit" class="button">Rent</button>
-                                            </form>
-                                        `
-                                            : ""
-                                        }
-                                    `
+                                        : ""
                                     }
                                 </td>
                                 ${
