--- a/register.html
+++ b/register.html
@@ -42,20 +42,10 @@
       <h1>Register</h1>
       <form id="registerForm" action="register.php" method="POST">
         <div class="form-group">
-          <input
-            type="text"
-            name="first_name"
-            placeholder="First Name"
-            required
-          />
+          <input type="text" name="fname" placeholder="First Name" required />
         </div>
         <div class="form-group">
-          <input
-            type="text"
-            name="last_name"
-            placeholder="Last Name"
-            required
-          />
+          <input type="text" name="lname" placeholder="Last Name" required />
         </div>
         <div class="form-group">
           <input type="email" name="email" placeholder="Email" required />
