--- a/view-cars.html
+++ b/view-cars.html
@@ -75,6 +75,7 @@
         </div>
         <button type="submit" class="button">Search</button>
       </form>
+      <a href="advanced-search.html" class="button">Advanced Search</a>
       <table>
         <thead>
           <tr>
