--- a/admin-rent-car.html
+++ b/admin-rent-car.html
@@ -46,11 +46,11 @@
       <h1>Rent Car</h1>
       <form action="admin-rent-car.php" method="POST">
         <div class="form-group">
-          <label for="customer_email">Customer Email:</label>
+          <label for="customer_id">Customer ID:</label>
           <input
-            type="email"
-            id="customer_email"
-            name="customer_email"
+            type="text"
+            id="customer_id"
+            name="customer_id"
             required
           />
         </div>
