--- a/advanced-search.html
+++ b/advanced-search.html
@@ -171,7 +171,7 @@
                                   ${
                                     !car.isAdmin && car.status === "Active"
                                       ? `
-                                    <form action="customer-rent-car.php" method="POST" style="display:inline;">
+                                    <form action="customer-rent-car.html" method="POST" style="display:inline;">
                                       <input type="hidden" name="car_id" value="${car.Car_ID}">
                                       <input type="hidden" name="user_email" value="${car.user_email}">
                                       <button type="submit" class="button">Rent</button>
