--- a/advanced-search.html
+++ b/advanced-search.html
@@ -73,23 +73,20 @@
         <div class="form-group">
           <input type="text" name="color" placeholder="Color" />
         </div>
-
         <div class="form-group">
           <input type="text" name="fname" placeholder="First Name" />
         </div>
-
         <div class="form-group">
           <input type="text" name="lname" placeholder="Last Name" />
         </div>
-
         <div class="form-group">
           <input type="text" name="phone" placeholder="Phone Number" />
         </div>
-
         <div class="form-group">
           <input type="date" id="reservationDate" name="reservationDate" />
         </div>
         <button type="submit" class="button">Search</button>
+        <a href="view-cars.html" class="button" style="text-decoration: none; text-align: center;">Normal Search</a>
       </form>
 
       <table>
@@ -111,8 +108,7 @@
             <th>Reservation Date</th>
             <th>Pickup Date</th>
             <th>Return Date</th>
-            <th>Action</th>
-            <!-- <th>Action</th> -->
+            <!-- Removed Action column header -->
             <th id="changeStatusHeader" style="display: none">Change Status</th>
           </tr>
         </thead>
@@ -168,49 +164,23 @@
                                 <td>${car.pickup_date}</td>
                                 <td>${car.return_date}</td>
                                 <td>
-                                  ${
-                                    !car.isAdmin && car.status === "Active"
-                                      ? `
-                                    <form action="customer-rent-car.html" method="POST" style="display:inline;">
-                                      <input type="hidden" name="car_id" value="${car.Car_ID}">
-                                      <input type="hidden" name="user_email" value="${car.user_email}">
-                                      <button type="submit" class="button">Rent</button>
-                                    </form>
-                                  `
-                                      : ""
-                                  }
+                                  <!-- Removed rent button code -->
                                 </td>
                                 ${
                                   car.isAdmin
-                                    ? `
+                                    ? ` 
                                 <td>
                                   <form action="update-car-status.php" method="POST" style="display:inline;">
-                                    <input type="hidden" name="car_id" value="${
-                                      car.Car_ID
-                                    }">
+                                    <input type="hidden" name="car_id" value="${car.Car_ID}">
                                     <select name="status">
-                                      <option value="Active" ${
-                                        car.status === "Active"
-                                          ? "selected"
-                                          : ""
-                                      }>Active</option>
-                                      <option value="Out of Service" ${
-                                        car.status === "Out of Service"
-                                          ? "selected"
-                                          : ""
-                                      }>Out of Service</option>
-                                      <option value="Rented" ${
-                                        car.status === "Rented"
-                                          ? "selected"
-                                          : ""
-                                      }>Rented</option>
+                                      <option value="Active" ${car.status === "Active" ? "selected" : ""}>Active</option>
+                                      <option value="Out of Service" ${car.status === "Out of Service" ? "selected" : ""}>Out of Service</option>
+                                      <option value="Rented" ${car.status === "Rented" ? "selected" : ""}>Rented</option>
                                     </select>
                                     <button type="submit" class="button">Update</button>
                                   </form>
                                   <form action="admin-rent-car.html" method="GET" style="display:inline;">
-                                    <input type="hidden" name="car_id" value="${
-                                      car.Car_ID
-                                    }">
+                                    <input type="hidden" name="car_id" value="${car.Car_ID}">
                                     <button type="submit" class="button">Rent</button>
                                   </form>
                                 </td>
